--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-jsoneditor-wrapper",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "description": "A React Typescript wrapper for jsoneditor by josdejong.",
   "keywords": [
     "jsoneditor",
@@ -11,7 +11,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && copyfiles -u 1 ./src/*.css ./dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,11 +19,12 @@
     "url": "git+https://github.com/felipecarrillo100/react-jsoneditor-wrapper"
   },
   "devDependencies": {
+    "@types/jsoneditor": "^9.5.1",
     "@types/react": "16.0.39",
-    "@types/jsoneditor": "^5.28.1"
+    "copyfiles": "^2.4.1"
   },
   "dependencies": {
-    "jsoneditor": "^6.3.0"
+    "jsoneditor": "^9.9.0"
   },
   "author": "Felipe Carrillo",
   "license": "MIT"
