--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && copyfiles -u 1 ./src/*.css ./dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,11 +19,12 @@
     "url": "git+https://github.com/felipecarrillo100/react-jsoneditor-wrapper"
   },
   "devDependencies": {
-    "@types/react": "16.0.39",
-    "@types/jsoneditor": "^5.28.1"
+    "@types/jsoneditor": "^9.5.1",
+    "@types/react": "^18.0.17",
+    "copyfiles": "^2.4.1"
   },
   "dependencies": {
-    "jsoneditor": "^9.5.6"
+    "jsoneditor": "^9.9.0"
   },
   "author": "Felipe Carrillo",
   "license": "MIT"
